--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "date-fns": "^4.1.0",
     "next": "15.1.6",
     "postcss-import": "^16.1.0",
     "react": "^19.0.0",
