Adicionado listagem de eventos; Implementado contexto de autenticação; Implementado JWT

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@types/jsonwebtoken": "^9.0.8",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.6",
     "postcss-import": "^16.1.0",
     "react": "^19.0.0",
